themedir     = $(datadir)/themes
adaptadir    = $(DESTDIR)$(themedir)/Adapta
noktodir     = $(DESTDIR)$(themedir)/Adapta-Nokto
adaptaetadir = $(DESTDIR)$(themedir)/Adapta-Eta
noktoetadir  = $(DESTDIR)$(themedir)/Adapta-Nokto-Eta

shelldir   = $(srcdir)/gnome-shell
shell_file = \
	$(shelldir)/gnome-shell.css \
	$(shelldir)/gnome-shell-theme.gresource \
	$(shelldir)/no-events.svg \
	$(shelldir)/no-notifications.svg \
	$(shelldir)/noise-texture.png \
	$(shelldir)/process-working.svg \
	$(shelldir)/toggle-off-hover.svg \
	$(shelldir)/toggle-off.svg \
	$(shelldir)/toggle-on-hover.svg \
	$(shelldir)/toggle-on.svg
shell_asset_file = \
	$(shelldir)/assets/calendar-arrow-left-hover.svg \
	$(shelldir)/assets/calendar-arrow-left.svg \
	$(shelldir)/assets/calendar-arrow-right-hover.svg \
	$(shelldir)/assets/calendar-arrow-right.svg \
	$(shelldir)/assets/checkbox-hover.svg \
	$(shelldir)/assets/checkbox-off-hover.svg \
	$(shelldir)/assets/checkbox-off.svg \
	$(shelldir)/assets/checkbox.svg \
	$(shelldir)/assets/corner-ripple-ltr.svg \
	$(shelldir)/assets/corner-ripple-rtl.svg \
	$(shelldir)/assets/dash-placeholder.svg \
	$(shelldir)/assets/go-down.svg \
	$(shelldir)/assets/go-up.svg \
	$(shelldir)/assets/media-control-active.svg \
	$(shelldir)/assets/media-control-hover.svg \
	$(shelldir)/assets/more-results.svg \
	$(shelldir)/assets/show-apps-active.svg \
	$(shelldir)/assets/show-apps.svg \
	$(shelldir)/assets/window-close-active.svg \
	$(shelldir)/assets/window-close-hover.svg \
	$(shelldir)/assets/window-close.svg
shell_asset_dot_file = \
	$(shelldir)/assets/dot/running1-bottom-focused.svg \
	$(shelldir)/assets/dot/running1-bottom.svg \
	$(shelldir)/assets/dot/running1-left-focused.svg \
	$(shelldir)/assets/dot/running1-left.svg \
	$(shelldir)/assets/dot/running1-right-focused.svg \
	$(shelldir)/assets/dot/running1-right.svg \
	$(shelldir)/assets/dot/running1-top-focused.svg \
	$(shelldir)/assets/dot/running1-top.svg \
	$(shelldir)/assets/dot/running2-bottom-focused.svg \
	$(shelldir)/assets/dot/running2-bottom.svg \
	$(shelldir)/assets/dot/running2-left-focused.svg \
	$(shelldir)/assets/dot/running2-left.svg \
	$(shelldir)/assets/dot/running2-right-focused.svg \
	$(shelldir)/assets/dot/running2-right.svg \
	$(shelldir)/assets/dot/running2-top-focused.svg \
	$(shelldir)/assets/dot/running2-top.svg \
	$(shelldir)/assets/dot/running3-bottom-focused.svg \
	$(shelldir)/assets/dot/running3-bottom.svg \
	$(shelldir)/assets/dot/running3-left-focused.svg \
	$(shelldir)/assets/dot/running3-left.svg \
	$(shelldir)/assets/dot/running3-right-focused.svg \
	$(shelldir)/assets/dot/running3-right.svg \
	$(shelldir)/assets/dot/running3-top-focused.svg \
	$(shelldir)/assets/dot/running3-top.svg \
	$(shelldir)/assets/dot/running4-bottom-focused.svg \
	$(shelldir)/assets/dot/running4-bottom.svg \
	$(shelldir)/assets/dot/running4-left-focused.svg \
	$(shelldir)/assets/dot/running4-left.svg \
	$(shelldir)/assets/dot/running4-right-focused.svg \
	$(shelldir)/assets/dot/running4-right.svg \
	$(shelldir)/assets/dot/running4-top-focused.svg \
	$(shelldir)/assets/dot/running4-top.svg
shell_extension_windowlist_file = \
	$(shelldir)/extensions/window-list/classic.css \
	$(shelldir)/extensions/window-list/stylesheet.css \
	$(shelldir)/extensions/window-list/README
shell_extension_workspace_file = \
	$(shelldir)/extensions/workspaces-to-dock/workspaces-to-dock.css
shell_extension_workspace_asset_file = \
	$(shelldir)/extensions/workspaces-to-dock/assets/four-bottom.svg \
	$(shelldir)/extensions/workspaces-to-dock/assets/four-left.svg \
	$(shelldir)/extensions/workspaces-to-dock/assets/four-right.svg \
	$(shelldir)/extensions/workspaces-to-dock/assets/four-top.svg \
	$(shelldir)/extensions/workspaces-to-dock/assets/h-four.svg \
	$(shelldir)/extensions/workspaces-to-dock/assets/h-one.svg \
	$(shelldir)/extensions/workspaces-to-dock/assets/h-three.svg \
	$(shelldir)/extensions/workspaces-to-dock/assets/h-two.svg \
	$(shelldir)/extensions/workspaces-to-dock/assets/one-bottom.svg \
	$(shelldir)/extensions/workspaces-to-dock/assets/one-left.svg \
	$(shelldir)/extensions/workspaces-to-dock/assets/one-right.svg \
	$(shelldir)/extensions/workspaces-to-dock/assets/one-top.svg \
	$(shelldir)/extensions/workspaces-to-dock/assets/three-bottom.svg \
	$(shelldir)/extensions/workspaces-to-dock/assets/three-left.svg \
	$(shelldir)/extensions/workspaces-to-dock/assets/three-right.svg \
	$(shelldir)/extensions/workspaces-to-dock/assets/three-top.svg \
	$(shelldir)/extensions/workspaces-to-dock/assets/two-bottom.svg \
	$(shelldir)/extensions/workspaces-to-dock/assets/two-left.svg \
	$(shelldir)/extensions/workspaces-to-dock/assets/two-right.svg \
	$(shelldir)/extensions/workspaces-to-dock/assets/two-top.svg

shellnoktodir    = $(srcdir)/gnome-shell-nokto
shell_nokto_file = \
	$(shellnoktodir)/gnome-shell.css \
	$(shellnoktodir)/gnome-shell-theme.gresource \
	$(shellnoktodir)/no-events.svg \
	$(shellnoktodir)/no-notifications.svg \
	$(shellnoktodir)/noise-texture.png \
	$(shellnoktodir)/process-working.svg \
	$(shellnoktodir)/toggle-off-hover.svg \
	$(shellnoktodir)/toggle-off.svg \
	$(shellnoktodir)/toggle-on-hover.svg \
	$(shellnoktodir)/toggle-on.svg
shell_nokto_asset_file = \
	$(shellnoktodir)/assets/calendar-arrow-left-hover.svg \
	$(shellnoktodir)/assets/calendar-arrow-left.svg \
	$(shellnoktodir)/assets/calendar-arrow-right-hover.svg \
	$(shellnoktodir)/assets/calendar-arrow-right.svg \
	$(shellnoktodir)/assets/checkbox-hover.svg \
	$(shellnoktodir)/assets/checkbox-off-hover.svg \
	$(shellnoktodir)/assets/checkbox-off.svg \
	$(shellnoktodir)/assets/checkbox.svg \
	$(shellnoktodir)/assets/corner-ripple-ltr.svg \
	$(shellnoktodir)/assets/corner-ripple-rtl.svg \
	$(shellnoktodir)/assets/dash-placeholder.svg \
	$(shellnoktodir)/assets/go-down.svg \
	$(shellnoktodir)/assets/go-up.svg \
	$(shellnoktodir)/assets/media-control-active.svg \
	$(shellnoktodir)/assets/media-control-hover.svg \
	$(shellnoktodir)/assets/more-results.svg \
	$(shellnoktodir)/assets/show-apps-active.svg \
	$(shellnoktodir)/assets/show-apps.svg \
	$(shellnoktodir)/assets/window-close-active.svg \
	$(shellnoktodir)/assets/window-close-hover.svg \
	$(shellnoktodir)/assets/window-close.svg

cinnamondir   = $(srcdir)/cinnamon
cinnamon_file = \
	$(cinnamondir)/cinnamon.css
cinnamon_asset_checkbox_file = \
	$(cinnamondir)/assets/checkbox/checkbox-checked.svg \
	$(cinnamondir)/assets/checkbox/checkbox-unchecked.svg \
	$(cinnamondir)/assets/checkbox/radiobutton-checked.svg \
	$(cinnamondir)/assets/checkbox/radiobutton-unchecked.svg
cinnamon_asset_menu_file = \
	$(cinnamondir)/assets/menu/menu-hover.svg \
	$(cinnamondir)/assets/menu/menu-separator.svg \
	$(cinnamondir)/assets/menu/menu.svg \
	$(cinnamondir)/assets/menu/submenu.svg
cinnamon_asset_misc_file = \
	$(cinnamondir)/assets/misc/add-workspace-active.svg \
	$(cinnamondir)/assets/misc/add-workspace-hover.svg \
	$(cinnamondir)/assets/misc/add-workspace.svg \
	$(cinnamondir)/assets/misc/bg.svg \
	$(cinnamondir)/assets/misc/button-box.svg \
	$(cinnamondir)/assets/misc/calendar-arrow-left.svg \
	$(cinnamondir)/assets/misc/calendar-arrow-right.svg \
	$(cinnamondir)/assets/misc/close-active.svg \
	$(cinnamondir)/assets/misc/close-hover.svg \
	$(cinnamondir)/assets/misc/close.svg \
	$(cinnamondir)/assets/misc/corner-ripple.svg \
	$(cinnamondir)/assets/misc/desklet-header.svg \
	$(cinnamondir)/assets/misc/desklet.svg \
	$(cinnamondir)/assets/misc/message.svg \
	$(cinnamondir)/assets/misc/modal.svg \
	$(cinnamondir)/assets/misc/osd.svg \
	$(cinnamondir)/assets/misc/overview-hover.svg \
	$(cinnamondir)/assets/misc/overview.svg \
	$(cinnamondir)/assets/misc/trash-icon.svg
cinnamon_asset_panel_file = \
	$(cinnamondir)/assets/panel/activities-active.svg \
	$(cinnamondir)/assets/panel/activities.svg \
	$(cinnamondir)/assets/panel/window-list-active-bottom.svg \
	$(cinnamondir)/assets/panel/window-list-active-top.svg \
	$(cinnamondir)/assets/panel/window-list-hover-bottom.svg \
	$(cinnamondir)/assets/panel/window-list-hover-top.svg
cinnamon_asset_switch_file = \
	$(cinnamondir)/assets/switch/switch-off.svg \
	$(cinnamondir)/assets/switch/switch-on.svg
cinnamon_asset_thumb_file = \
	$(cinnamondir)/assets/thumbnail.png

cinnamonnoktodir = $(srcdir)/cinnamon-nokto
cinnamon_nokto_file = \
	$(cinnamonnoktodir)/cinnamon.css
cinnamon_nokto_asset_checkbox_file = \
	$(cinnamonnoktodir)/assets/checkbox/checkbox-checked.svg \
	$(cinnamonnoktodir)/assets/checkbox/checkbox-unchecked.svg \
	$(cinnamonnoktodir)/assets/checkbox/radiobutton-checked.svg \
	$(cinnamonnoktodir)/assets/checkbox/radiobutton-unchecked.svg
cinnamon_nokto_asset_menu_file = \
	$(cinnamonnoktodir)/assets/menu/menu-hover.svg \
	$(cinnamonnoktodir)/assets/menu/menu-separator.svg \
	$(cinnamonnoktodir)/assets/menu/menu.svg \
	$(cinnamonnoktodir)/assets/menu/submenu.svg
cinnamon_nokto_asset_misc_file = \
	$(cinnamonnoktodir)/assets/misc/add-workspace-active.svg \
	$(cinnamonnoktodir)/assets/misc/add-workspace-hover.svg \
	$(cinnamonnoktodir)/assets/misc/add-workspace.svg \
	$(cinnamonnoktodir)/assets/misc/bg.svg \
	$(cinnamonnoktodir)/assets/misc/button-box.svg \
	$(cinnamonnoktodir)/assets/misc/calendar-arrow-left.svg \
	$(cinnamonnoktodir)/assets/misc/calendar-arrow-right.svg \
	$(cinnamonnoktodir)/assets/misc/close-active.svg \
	$(cinnamonnoktodir)/assets/misc/close-hover.svg \
	$(cinnamonnoktodir)/assets/misc/close.svg \
	$(cinnamonnoktodir)/assets/misc/corner-ripple.svg \
	$(cinnamonnoktodir)/assets/misc/desklet-header.svg \
	$(cinnamonnoktodir)/assets/misc/desklet.svg \
	$(cinnamonnoktodir)/assets/misc/message.svg \
	$(cinnamonnoktodir)/assets/misc/modal.svg \
	$(cinnamonnoktodir)/assets/misc/osd.svg \
	$(cinnamonnoktodir)/assets/misc/overview-hover.svg \
	$(cinnamonnoktodir)/assets/misc/overview.svg \
	$(cinnamonnoktodir)/assets/misc/trash-icon.svg
cinnamon_nokto_asset_panel_file = \
	$(cinnamonnoktodir)/assets/panel/activities-active.svg \
	$(cinnamonnoktodir)/assets/panel/activities.svg \
	$(cinnamonnoktodir)/assets/panel/window-list-active-bottom.svg \
	$(cinnamonnoktodir)/assets/panel/window-list-active-top.svg \
	$(cinnamonnoktodir)/assets/panel/window-list-hover-bottom.svg \
	$(cinnamonnoktodir)/assets/panel/window-list-hover-top.svg
cinnamon_nokto_asset_switch_file = \
	$(cinnamonnoktodir)/assets/switch/switch-off.svg \
	$(cinnamonnoktodir)/assets/switch/switch-on.svg
cinnamon_nokto_asset_thumb_file = \
	$(cinnamonnoktodir)/assets/thumbnail.png

unitydir   = $(srcdir)/unity
unity_file = \
	$(unitydir)/close_dash_disabled.svg \
	$(unitydir)/close_dash_prelight.svg \
	$(unitydir)/close_dash_pressed.svg \
	$(unitydir)/close_dash.svg \
	$(unitydir)/close_focused_normal.svg \
	$(unitydir)/close_focused_prelight.svg \
	$(unitydir)/close_focused_pressed.svg \
	$(unitydir)/close.svg \
	$(unitydir)/close_unfocused_prelight.svg \
	$(unitydir)/close_unfocused_pressed.svg \
	$(unitydir)/close_unfocused.svg \
	$(unitydir)/launcher_arrow_btt_19.svg \
	$(unitydir)/launcher_arrow_btt_37.svg \
	$(unitydir)/launcher_arrow_ltr_19.svg \
	$(unitydir)/launcher_arrow_ltr_37.svg \
	$(unitydir)/launcher_arrow_rtl_19.svg \
	$(unitydir)/launcher_arrow_rtl_37.svg \
	$(unitydir)/launcher_arrow_ttb_19.svg \
	$(unitydir)/launcher_arrow_ttb_37.svg \
	$(unitydir)/launcher_icon_back_150.svg \
	$(unitydir)/launcher_icon_back_54.svg \
	$(unitydir)/launcher_icon_edge_150.svg \
	$(unitydir)/launcher_icon_edge_54.svg \
	$(unitydir)/launcher_icon_glow_200.svg \
	$(unitydir)/launcher_icon_glow_62.svg \
	$(unitydir)/launcher_icon_selected_back_150.svg \
	$(unitydir)/launcher_icon_selected_back_54.svg \
	$(unitydir)/launcher_icon_shadow_200.svg \
	$(unitydir)/launcher_icon_shadow_62.svg \
	$(unitydir)/launcher_icon_shine_150.svg \
	$(unitydir)/launcher_icon_shine_54.svg \
	$(unitydir)/launcher_pip_btt_19.svg \
	$(unitydir)/launcher_pip_btt_37.svg \
	$(unitydir)/launcher_pip_ltr_19.svg \
	$(unitydir)/launcher_pip_ltr_37.svg \
	$(unitydir)/launcher_pip_rtl_19.svg \
	$(unitydir)/launcher_pip_rtl_37.svg \
	$(unitydir)/launcher_pip_ttb_19.svg \
	$(unitydir)/launcher_pip_ttb_37.svg \
	$(unitydir)/maximize_dash_disabled.svg \
	$(unitydir)/maximize_dash_prelight.svg \
	$(unitydir)/maximize_dash_pressed.svg \
	$(unitydir)/maximize_dash.svg \
	$(unitydir)/maximize_focused_normal.svg \
	$(unitydir)/maximize_focused_prelight.svg \
	$(unitydir)/maximize_focused_pressed.svg \
	$(unitydir)/maximize.svg \
	$(unitydir)/maximize_unfocused_prelight.svg \
	$(unitydir)/maximize_unfocused_pressed.svg \
	$(unitydir)/maximize_unfocused.svg \
	$(unitydir)/minimize_dash_disabled.svg \
	$(unitydir)/minimize_dash_prelight.svg \
	$(unitydir)/minimize_dash_pressed.svg \
	$(unitydir)/minimize_dash.svg \
	$(unitydir)/minimized.svg \
	$(unitydir)/minimize_focused_normal.svg \
	$(unitydir)/minimize_focused_prelight.svg \
	$(unitydir)/minimize_focused_pressed.svg \
	$(unitydir)/minimize.svg \
	$(unitydir)/minimize_unfocused_prelight.svg \
	$(unitydir)/minimize_unfocused_pressed.svg \
	$(unitydir)/minimize_unfocused.svg \
	$(unitydir)/progress_bar_fill.svg \
	$(unitydir)/progress_bar_trough.svg \
	$(unitydir)/sheet_style_close_focused_prelight.svg \
	$(unitydir)/sheet_style_close_focused_pressed.svg \
	$(unitydir)/sheet_style_close_focused.svg \
	$(unitydir)/unmaximize_dash_disabled.svg \
	$(unitydir)/unmaximize_dash_prelight.svg \
	$(unitydir)/unmaximize_dash_pressed.svg \
	$(unitydir)/unmaximize_dash.svg \
	$(unitydir)/unmaximize_focused_normal.svg \
	$(unitydir)/unmaximize_focused_prelight.svg \
	$(unitydir)/unmaximize_focused_pressed.svg \
	$(unitydir)/unmaximize.svg \
	$(unitydir)/unmaximize_unfocused_prelight.svg \
	$(unitydir)/unmaximize_unfocused_pressed.svg \
	$(unitydir)/unmaximize_unfocused.svg

xfcedir   = $(srcdir)/xfce-notify-4.0
xfce_file = \
	$(xfcedir)/flat-button-active.svg \
	$(xfcedir)/flat-button-hover.svg \
	$(xfcedir)/flat-button-insensitive.svg \
	$(xfcedir)/flat-button.svg \
	$(xfcedir)/gtkrc

# ****************************
# * Generate CSS stylesheets *
# ****************************

all:
# check concurrency-build mode
if ENABLE_PARALLEL
	cd $(srcdir)/sass && \
	$(PARALLEL) --no-notice --line-buffer -j0 \
	$(BUNDLE) exec $(SASS) --update --force --sourcemap=none --style=compact ::: \
		gnome-shell/gnome-shell.scss:../gnome-shell/gnome-shell.css \
		gnome-shell/gnome-shell-dark.scss:../gnome-shell-nokto/gnome-shell.css \
		gnome-shell/stylesheet.scss:../gnome-shell/extensions/window-list/stylesheet.css \
		gnome-shell/classic.scss:../gnome-shell/extensions/window-list/classic.css \
		gnome-shell/workspaces-to-dock.scss:../gnome-shell/extensions/workspaces-to-dock/workspaces-to-dock.css
else
	cd $(srcdir)/sass && \
	$(BUNDLE) exec $(SASS) --update --force --sourcemap=none --style=compact \
		gnome-shell/gnome-shell.scss:../gnome-shell/gnome-shell.css \
		gnome-shell/gnome-shell-dark.scss:../gnome-shell-nokto/gnome-shell.css \
		gnome-shell/stylesheet.scss:../gnome-shell/extensions/window-list/stylesheet.css \
		gnome-shell/classic.scss:../gnome-shell/extensions/window-list/classic.css \
		gnome-shell/workspaces-to-dock.scss:../gnome-shell/extensions/workspaces-to-dock/workspaces-to-dock.css
endif

	$(MKDIR_P) $(srcdir)/gnome-shell/assets
	$(MKDIR_P) $(srcdir)/gnome-shell/assets/dot
	$(MKDIR_P) $(srcdir)/gnome-shell/extensions//workspaces-to-dock/assets
	$(MKDIR_P) $(srcdir)/gnome-shell-nokto/assets
	$(MKDIR_P) $(srcdir)/gnome-shell-nokto/assets/dot
	cd $(srcdir)/asset && ./clone-assets-gnome-shell.sh

	$(GLIB_COMPILE_RESOURCES) --sourcedir=$(shelldir) \
		$(shelldir)/gnome-shell-theme.gresource.xml
	$(GLIB_COMPILE_RESOURCES) --sourcedir=$(shellnoktodir) \
		$(shellnoktodir)/gnome-shell-theme.gresource.xml

if ENABLE_CINNAMON
if ENABLE_PARALLEL
	cd $(srcdir)/sass && \
	$(PARALLEL) --no-notice --line-buffer -j0 \
	$(BUNDLE) exec $(SASS) --update --force --sourcemap=none --style=compact ::: \
		cinnamon/cinnamon.scss:../cinnamon/cinnamon.css \
		cinnamon/cinnamon-dark.scss:../cinnamon-nokto/cinnamon.css
else
	cd $(srcdir)/sass && \
	$(BUNDLE) exec $(SASS) --update --force --sourcemap=none --style=compact \
		cinnamon/cinnamon.scss:../cinnamon/cinnamon.css \
		cinnamon/cinnamon-dark.scss:../cinnamon-nokto/cinnamon.css
endif

	$(MKDIR_P) $(srcdir)/cinnamon/assets
	$(MKDIR_P) $(srcdir)/cinnamon/assets/checkbox
	$(MKDIR_P) $(srcdir)/cinnamon/assets/menu
	$(MKDIR_P) $(srcdir)/cinnamon/assets/misc
	$(MKDIR_P) $(srcdir)/cinnamon/assets/panel
	$(MKDIR_P) $(srcdir)/cinnamon/assets/switch
	$(MKDIR_P) $(srcdir)/cinnamon-nokto/assets
	$(MKDIR_P) $(srcdir)/cinnamon-nokto/assets/checkbox
	$(MKDIR_P) $(srcdir)/cinnamon-nokto/assets/menu
	$(MKDIR_P) $(srcdir)/cinnamon-nokto/assets/misc
	$(MKDIR_P) $(srcdir)/cinnamon-nokto/assets/panel
	$(MKDIR_P) $(srcdir)/cinnamon-nokto/assets/switch
	cd $(srcdir)/asset && ./clone-assets-cinnamon.sh
	cd $(srcdir)/asset && ./render-assets-cinnamon-thumb.sh
endif

if ENABLE_UNITY
	$(MKDIR_P) $(srcdir)/unity
	cd $(srcdir)/asset && ./clone-assets-unity.sh
endif

if ENABLE_XFCE
	cd $(srcdir)/asset && ./clone-assets-xfce.sh
endif

# *****************
# * Install files *
# *****************

install-data-local:
	$(MKDIR_P) $(adaptadir)/gnome-shell
	$(MKDIR_P) $(adaptadir)/gnome-shell/assets
	$(MKDIR_P) $(adaptadir)/gnome-shell/assets/dot
	$(MKDIR_P) $(adaptadir)/gnome-shell/extensions
	$(MKDIR_P) $(adaptadir)/gnome-shell/extensions/window-list
	$(MKDIR_P) $(adaptadir)/gnome-shell/extensions/workspaces-to-dock
	$(MKDIR_P) $(adaptadir)/gnome-shell/extensions/workspaces-to-dock/assets
	cp -Rv $(shell_file) $(adaptadir)/gnome-shell
	cp -Rv $(shell_asset_file) $(adaptadir)/gnome-shell/assets
	cp -Rv $(shell_asset_dot_file) $(adaptadir)/gnome-shell/assets/dot
	cp -Rv $(shell_extension_windowlist_file) \
		$(adaptadir)/gnome-shell/extensions/window-list
	cp -Rv $(shell_extension_workspace_file) \
		$(adaptadir)/gnome-shell/extensions/workspaces-to-dock
	cp -Rv $(shell_extension_workspace_asset_file) \
		$(adaptadir)/gnome-shell/extensions/workspaces-to-dock/assets

	$(MKDIR_P) $(noktodir)/gnome-shell
	$(MKDIR_P) $(noktodir)/gnome-shell/assets
	$(MKDIR_P) $(noktodir)/gnome-shell/assets/dot
	$(MKDIR_P) $(noktodir)/gnome-shell/extensions
	$(MKDIR_P) $(noktodir)/gnome-shell/extensions/window-list
	$(MKDIR_P) $(noktodir)/gnome-shell/extensions/workspaces-to-dock
	$(MKDIR_P) $(noktodir)/gnome-shell/extensions/workspaces-to-dock/assets
	cp -Rv $(shell_nokto_file) $(noktodir)/gnome-shell
	cp -Rv $(shell_nokto_asset_file) $(noktodir)/gnome-shell/assets
	cp -Rv $(shell_asset_dot_file) $(noktodir)/gnome-shell/assets/dot
	cp -Rv $(shell_extension_windowlist_file) \
		$(noktodir)/gnome-shell/extensions/window-list
	cp -Rv $(shell_extension_workspace_file) \
		$(noktodir)/gnome-shell/extensions/workspaces-to-dock
	cp -Rv $(shell_extension_workspace_asset_file) \
		$(noktodir)/gnome-shell/extensions/workspaces-to-dock/assets

if ENABLE_CINNAMON
	$(MKDIR_P) $(adaptadir)/cinnamon
	$(MKDIR_P) $(adaptadir)/cinnamon/assets
	$(MKDIR_P) $(adaptadir)/cinnamon/assets/checkbox
	$(MKDIR_P) $(adaptadir)/cinnamon/assets/menu
	$(MKDIR_P) $(adaptadir)/cinnamon/assets/misc
	$(MKDIR_P) $(adaptadir)/cinnamon/assets/panel
	$(MKDIR_P) $(adaptadir)/cinnamon/assets/switch
	cp -Rv $(cinnamon_file) $(adaptadir)/cinnamon
	cp -Rv $(cinnamon_asset_checkbox_file) \
		$(adaptadir)/cinnamon/assets/checkbox
	cp -Rv $(cinnamon_asset_menu_file) \
		$(adaptadir)/cinnamon/assets/menu
	cp -Rv $(cinnamon_asset_misc_file) \
		$(adaptadir)/cinnamon/assets/misc
	cp -Rv $(cinnamon_asset_panel_file) \
		$(adaptadir)/cinnamon/assets/panel
	cp -Rv $(cinnamon_asset_switch_file) \
		$(adaptadir)/cinnamon/assets/switch
	cp -Rv $(cinnamon_asset_thumb_file) \
		$(adaptadir)/cinnamon/assets
	cd $(adaptadir)/cinnamon && \
		ln -sf ./assets/thumbnail.png thumbnail.png

	$(MKDIR_P) $(noktodir)/cinnamon
	$(MKDIR_P) $(noktodir)/cinnamon/assets
	$(MKDIR_P) $(noktodir)/cinnamon/assets/checkbox
	$(MKDIR_P) $(noktodir)/cinnamon/assets/menu
	$(MKDIR_P) $(noktodir)/cinnamon/assets/misc
	$(MKDIR_P) $(noktodir)/cinnamon/assets/panel
	$(MKDIR_P) $(noktodir)/cinnamon/assets/switch
	cp -Rv $(cinnamon_nokto_file) $(noktodir)/cinnamon
	cp -Rv $(cinnamon_nokto_asset_checkbox_file) \
		$(noktodir)/cinnamon/assets/checkbox
	cp -Rv $(cinnamon_nokto_asset_menu_file) \
		$(noktodir)/cinnamon/assets/menu
	cp -Rv $(cinnamon_nokto_asset_misc_file) \
		$(noktodir)/cinnamon/assets/misc
	cp -Rv $(cinnamon_nokto_asset_panel_file) \
		$(noktodir)/cinnamon/assets/panel
	cp -Rv $(cinnamon_nokto_asset_switch_file) \
		$(noktodir)/cinnamon/assets/switch
	cp -Rv $(cinnamon_nokto_asset_thumb_file) \
		$(noktodir)/cinnamon/assets
	cd $(noktodir)/cinnamon && \
		ln -sf ./assets/thumbnail.png thumbnail.png
endif

if ENABLE_UNITY
	$(MKDIR_P) $(adaptadir)/unity
	cp -Rv $(unity_file) $(adaptadir)/unity
	cd $(adaptadir)
	ln -sf ../Adapta/unity $(noktodir)/unity
	ln -sf ../Adapta/unity $(adaptaetadir)/unity
	ln -sf ../Adapta/unity $(noktoetadir)/unity
endif

if ENABLE_XFCE
	$(MKDIR_P) $(adaptadir)/xfce-notify-4.0
	cp -Rv $(xfce_file) $(adaptadir)/xfce-notify-4.0
	cd $(adaptadir)
	ln -sf ../Adapta/xfce-notify-4.0 $(noktodir)/xfce-notify-4.0
	ln -sf ../Adapta/xfce-notify-4.0 $(adaptaetadir)/xfce-notify-4.0
	ln -sf ../Adapta/xfce-notify-4.0 $(noktoetadir)/xfce-notify-4.0
endif

# *******************
# * Uninstall files *
# *******************

uninstall-local:
	test -e $(noktodir)/gnome-shell && rm -rfv $(noktodir)/gnome-shell
	test -e $(adaptadir)/gnome-shell && rm -rfv $(adaptadir)/gnome-shell

if ENABLE_CINNAMON
	test -e $(noktodir)/cinnamon && rm -rfv $(noktodir)/cinnamon
	test -e $(adaptadir)/cinnamon && rm -rfv $(adaptadir)/cinnamon
endif

if ENABLE_UNITY
	test -e $(noktodir)/unity && rm -rfv $(noktodir)/unity
	test -e $(adaptadir)/unity && rm -rfv $(adaptadir)/unity
	test -e $(noktoetadir)/unity && rm -rfv $(noktoetadir)/unity
	test -e $(adaptaetadir)/unity && rm -rfv $(adaptaetadir)/unity
endif

if ENABLE_XFCE
	test -e $(noktodir)/xfce-notify-4.0 && \
		rm -rfv $(noktodir)/xfce-notify-4.0
	test -e $(adaptadir)/xfce-notify-4.0 && \
		rm -rfv $(adaptadir)/xfce-notify-4.0
	test -e $(noktoetadir)/xfce-notify-4.0 && \
		rm -rfv $(noktoetadir)/xfce-notify-4.0
	test -e $(adaptaetadir)/xfce-notify-4.0 && \
		rm -rfv $(adaptaetadir)/xfce-notify-4.0
endif

# ****************************
# * Clean up generated files *
# ****************************

CLEANFILES = \
	$(srcdir)/gnome-shell/gnome-shell.css \
	$(srcdir)/gnome-shell-nokto/gnome-shell.css \
	$(srcdir)/gnome-shell/extensions/window-list/stylesheet.css \
	$(srcdir)/gnome-shell/extensions/window-list/classic.css \
	$(srcdir)/gnome-shell/extensions/workspaces-to-dock/workspaces-to-dock.css \
	$(srcdir)/gnome-shell/gnome-shell-theme.gresource \
	$(srcdir)/gnome-shell-nokto/gnome-shell-theme.gresource \
	$(srcdir)/gnome-shell/*.svg \
	$(srcdir)/gnome-shell/*.png \
	$(srcdir)/gnome-shell/assets/*.svg \
	$(srcdir)/gnome-shell/assets/dot/*.svg \
	$(srcdir)/gnome-shell/extensions/workspaces-to-dock/assets/*.svg \
	$(srcdir)/gnome-shell-nokto/*.svg \
	$(srcdir)/gnome-shell-nokto/*.png \
	$(srcdir)/gnome-shell-nokto/assets/*.svg \
	$(srcdir)/gnome-shell-nokto/assets/dot/*.svg \
	$(srcdir)/sass/common/_key_colors.scss \
	$(srcdir)/asset/assets-gnome-shell/common/toggle-on-hover.svg \
	$(srcdir)/asset/assets-gnome-shell/common/toggle-on.svg \
	$(srcdir)/asset/assets-gnome-shell/common/checkbox-hover.svg \
	$(srcdir)/asset/assets-gnome-shell/common/checkbox.svg \
	$(srcdir)/asset/assets-gnome-shell/common/corner-ripple-ltr.svg \
	$(srcdir)/asset/assets-gnome-shell/common/corner-ripple-rtl.svg \
	$(srcdir)/asset/assets-gnome-shell/common/dash-placeholder.svg \
	$(srcdir)/asset/assets-gnome-shell/common/go-down.svg \
	$(srcdir)/asset/assets-gnome-shell/common/go-up.svg \
	$(srcdir)/asset/assets-gnome-shell/common/media-control-active.svg \
	$(srcdir)/asset/assets-gnome-shell/common/media-control-hover.svg \
	$(srcdir)/asset/assets-gnome-shell/common/more-results.svg \
	$(srcdir)/asset/assets-gnome-shell/common/window-close.svg \
	$(srcdir)/asset/assets-gnome-shell/common/window-close-active.svg \
	$(srcdir)/asset/assets-gnome-shell/common/window-close-hover.svg \
	$(srcdir)/asset/assets-gnome-shell/dot/*.svg \
	$(srcdir)/asset/assets-gnome-shell/workspaces-to-dock/*.svg
if ENABLE_CINNAMON
CLEANFILES += \
	$(srcdir)/cinnamon/cinnamon.css \
	$(srcdir)/cinnamon-nokto/cinnamon.css \
	$(srcdir)/cinnamon/assets/thumbnail.png \
	$(srcdir)/cinnamon-nokto/assets/thumbnail.png \
	$(srcdir)/cinnamon/assets/*/*.svg \
	$(srcdir)/cinnamon-nokto/assets/*/*.svg \
	$(srcdir)/asset/assets-cinnamon/common/checkbox/*.svg \
	$(srcdir)/asset/assets-cinnamon/common/misc/add-workspace-active.svg \
	$(srcdir)/asset/assets-cinnamon/common/misc/close.svg \
	$(srcdir)/asset/assets-cinnamon/common/misc/close-active.svg \
	$(srcdir)/asset/assets-cinnamon/common/misc/close-hover.svg \
	$(srcdir)/asset/assets-cinnamon/common/misc/corner-ripple.svg \
	$(srcdir)/asset/assets-cinnamon/common/panel/activities-active.svg \
	$(srcdir)/asset/assets-cinnamon/common/panel/window-list-active-bottom.svg \
	$(srcdir)/asset/assets-cinnamon/common/panel/window-list-active-top.svg \
	$(srcdir)/asset/assets-cinnamon/common/switch/switch-on.svg \
	$(srcdir)/asset/assets-cinnamon/light/misc/message.svg \
	$(srcdir)/asset/assets-cinnamon/nokto/misc/message.svg
endif
if ENABLE_UNITY
CLEANFILES += \
	$(srcdir)/unity/*.svg \
	$(srcdir)/asset/assets-unity/close_focused_prelight.svg \
	$(srcdir)/asset/assets-unity/close_focused_pressed.svg \
	$(srcdir)/asset/assets-unity/progress_bar_fill.svg \
	$(srcdir)/asset/assets-unity/progress_bar_trough.svg
endif
if ENABLE_XFCE
CLEANFILES += \
	$(srcdir)/xfce-notify-4.0/*.svg \
	$(srcdir)/asset/assets-xfce/flat-button-active.svg \
	$(srcdir)/asset/assets-xfce/flat-button-hover.svg
endif

DISTCLEANFILES = \
	$(CLEANFILES)
